Fix spacing on mobile

--- a/style.css
+++ b/style.css
@@ -75,13 +75,6 @@ main {
   height: 70vh;
 }
 
-@media (max-width: 640px) {
-  #group {
-    height: 65%;
-  }
-}
-
-
 #menu {
   font-size: 2.25rem;
   padding: 2rem 2.5rem 0 2.5rem;
